WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115577
[wk2] Page Overlays: deviceScaleFactor doesn't update when the display changes
https://bugs.webkit.org/show_bug.cgi?id=115577
Summary
[wk2] Page Overlays: deviceScaleFactor doesn't update when the display changes
Tim Horton
Reported
2013-05-03 15:44:37 PDT
We don't propagate the deviceScaleFactor change to the page overlay layers. <
rdar://problem/13762583
>
Attachments
patch
(3.17 KB, patch)
2013-05-03 15:46 PDT
,
Tim Horton
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-05-03 15:46:40 PDT
Created
attachment 200503
[details]
patch
Tim Horton
Comment 2
2013-05-05 15:11:27 PDT
http://trac.webkit.org/changeset/149580
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug