[wk2] Page Overlays: deviceScaleFactor doesn't update when the display changes https://bugs.webkit.org/show_bug.cgi?id=115577 <rdar://problem/13762583>

Reviewed by Darin Adler.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::setDeviceScaleFactor):
Invalidate the page overlay layers' device scale factor when
TiledCoreAnimationDrawingArea is notified that it has changed.

* WebCore.exp.in:
Export GraphicsLayer::noteDeviceOrPageScaleFactorChangedIncludingDescendants


Canonical link: https://commits.webkit.org/134044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149580 268f45cc-cd09-0410-ab3c-d52691b4dbfc